# composite-video-simulator

./: .gitignore  Makefile.am  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure.ac  ffmpeg_average_delay.cpp  ffmpeg_cassette.cpp  ffmpeg_colorkey.cpp  ffmpeg_colormap.cpp  ffmpeg_ntsc.cpp  ffmpeg_posterize.cpp  ffmpeg_raw28ntsc.cpp  ffmpeg_raw28ntsc_step1.cpp  ffmpeg_raw28ntsc_step2.cpp  ffmpeg_raw28ntsc_step3.cpp  ffmpeg_raw28ntsc_step4.cpp  ffmpeg_raw28ntsc_step7.cpp  ffmpeg_scanimate.cpp  ffmpeg_to_composite.cpp  filmac.cpp  flac2rawpipe.sh  frameblend.cpp  git-source-pickup.pl  git-update-all  git-update-all-wo-push  normalize_ts.cpp  text2vaporwave.pl
